<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundTint="@color/cardview_dark_background"
    tools:context=".SecondFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/identit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_account_circle_24" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="288dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nom"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="288dp"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/pr_nom"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:contentDescription="@string/naissance"
        app:layout_constraintBottom_toBottomOf="@+id/editTextDate"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/editTextDate"
        app:srcCompat="@drawable/ic_baseline_today_24" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="288dp"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/date_de_naissance"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName2"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

    <EditText
        android:id="@+id/editTextBirthPlace"
        android:layout_width="288dp"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/lieu_de_naissance"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editTextDate"
        app:layout_constraintStart_toStartOf="@+id/editTextDate"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:contentDescription="@string/adresse"
        android:src="@drawable/ic_baseline_house_24"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextPostalAddress2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/editTextTextPostalAddress2" />

    <EditText
        android:id="@+id/editTextTextPostalAddress2"
        android:layout_width="288dp"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/adresse"
        android:inputType="textPostalAddress"
        app:layout_constraintEnd_toEndOf="@+id/editTextBirthPlace"
        app:layout_constraintStart_toStartOf="@+id/editTextBirthPlace"
        app:layout_constraintTop_toBottomOf="@+id/editTextBirthPlace" />

    <EditText
        android:id="@+id/editTextCP"
        android:layout_width="96dp"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:autofillHints="postalCode"
        android:ems="10"
        android:hint="@string/cp"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPostalAddress2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPostalAddress2"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPostalAddress2" />

    <EditText
        android:id="@+id/editTextCity"
        android:layout_width="184dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:autofillHints="postalAddress"
        android:ems="10"
        android:hint="@string/ville"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/editTextCP"
        app:layout_constraintStart_toEndOf="@+id/editTextCP"
        app:layout_constraintTop_toTopOf="@+id/editTextCP" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_add_att"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/editTextCP" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <EditText
        android:id="@+id/label_att_perm"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/label"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/spinner"
        app:layout_constraintStart_toEndOf="@+id/spinner"
        app:layout_constraintTop_toTopOf="@+id/spinner" />

    <ImageButton
        android:id="@+id/att_perm_browse"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/roundedbutton"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_baseline_folder_open_24"
        app:layout_constraintBottom_toBottomOf="@+id/label_att_perm"
        app:layout_constraintStart_toEndOf="@+id/label_att_perm"
        app:layout_constraintTop_toTopOf="@+id/label_att_perm" />

    <ImageButton
        android:id="@+id/att_perm_photo"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/roundedbutton"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_baseline_camera_alt_24"
        app:layout_constraintBottom_toBottomOf="@+id/att_perm_browse"
        app:layout_constraintStart_toEndOf="@+id/att_perm_browse"
        app:layout_constraintTop_toTopOf="@+id/att_perm_browse" />

    <View
        android:id="@+id/divider6"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TableLayout
        android:id="@+id/tableAttesations"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider6">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_noun_attestation_824051" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:gravity="clip_horizontal|center"
                android:paddingHorizontal="60dp"
                android:paddingVertical="8dp"
                android:text="" />

            <ImageButton
                android:id="@+id/button_del_att"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/roundedbutton"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_close_24" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>