<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <ImageButton
        android:id="@+id/button_profil"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/roundedbutton"
        android:contentDescription="@string/profil"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toStartOf="@+id/button_new"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_account_circle_24" />

    <ImageButton
        android:id="@+id/button_new"
        style="@android:style/Widget.Material.ImageButton"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/roundedbutton"
        android:contentDescription="@string/nouvelle_attestation"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_profil"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_library_add_24" />

    <ImageButton
        android:id="@+id/button_show_qr"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/roundedbutton"
        android:contentDescription="@string/afficher_attestation"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toStartOf="@+id/button_show_pdf"
        app:layout_constraintStart_toEndOf="@+id/button_show_home"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:srcCompat="@drawable/ic_qr_covid" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profil"
        app:layout_constraintEnd_toEndOf="@+id/button_profil"
        app:layout_constraintStart_toStartOf="@+id/button_profil"
        app:layout_constraintTop_toBottomOf="@+id/button_profil" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/nouvelle_attestation"
        app:layout_constraintEnd_toEndOf="@+id/button_new"
        app:layout_constraintStart_toStartOf="@+id/button_new"
        app:layout_constraintTop_toBottomOf="@+id/button_new" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/afficher_attestation"
        app:layout_constraintEnd_toEndOf="@+id/button_show_pdf"
        app:layout_constraintStart_toStartOf="@+id/button_show_pdf"
        app:layout_constraintTop_toBottomOf="@+id/button_show_pdf" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageButton
        android:id="@+id/button_show_home"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/roundedbutton"
        android:scaleType="centerInside"
        android:src="@drawable/ic_noun_attestation_824051"
        app:layout_constraintEnd_toStartOf="@+id/button_show_qr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/afficher_njustificatif_ndomicile"
        app:layout_constraintEnd_toEndOf="@+id/button_show_home"
        app:layout_constraintStart_toStartOf="@+id/button_show_home"
        app:layout_constraintTop_toBottomOf="@+id/button_show_home" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider4">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </TableLayout>

    <ImageButton
        android:id="@+id/button_show_pdf"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/roundedbutton"
        android:scaleType="centerInside"
        android:src="@drawable/ic_attestinator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_show_qr"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/afficher_nqrcode"
        app:layout_constraintEnd_toEndOf="@+id/button_show_qr"
        app:layout_constraintStart_toStartOf="@+id/button_show_qr"
        app:layout_constraintTop_toBottomOf="@+id/button_show_qr" />
</androidx.constraintlayout.widget.ConstraintLayout>